# sentrix

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.example.toml
.github/workflows/: release.yml
config/: example.toml
src/: config.rs  handler.rs  main.rs
src/app/: auth.rs  handler.rs  logging.rs  mod.rs  router.rs  startup.rs  state.rs
src/auth/: extractor.rs  mod.rs  token.rs
